// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Days> marks days as out of range 1`] = `
Object {
  "days": Array [
    Object {
      "isOutOfRange": true,
      "label": 1,
      "value": 1,
    },
    Object {
      "isOutOfRange": true,
      "label": 2,
      "value": 2,
    },
    Object {
      "isOutOfRange": true,
      "label": 3,
      "value": 3,
    },
    Object {
      "label": 4,
      "value": 4,
    },
    Object {
      "label": 5,
      "value": 5,
    },
    Object {
      "label": 6,
      "value": 6,
    },
    Object {
      "label": 7,
      "value": 7,
    },
    Object {
      "label": 8,
      "value": 8,
    },
    Object {
      "label": 9,
      "value": 9,
    },
    Object {
      "label": 10,
      "value": 10,
    },
    Object {
      "label": 11,
      "value": 11,
    },
    Object {
      "label": 12,
      "value": 12,
    },
    Object {
      "label": 13,
      "value": 13,
    },
    Object {
      "label": 14,
      "value": 14,
    },
    Object {
      "label": 15,
      "value": 15,
    },
    Object {
      "label": 16,
      "value": 16,
    },
    Object {
      "label": 17,
      "value": 17,
    },
    Object {
      "label": 18,
      "value": 18,
    },
    Object {
      "label": 19,
      "value": 19,
    },
    Object {
      "label": 20,
      "value": 20,
    },
    Object {
      "label": 21,
      "value": 21,
    },
    Object {
      "label": 22,
      "value": 22,
    },
    Object {
      "label": 23,
      "value": 23,
    },
    Object {
      "label": 24,
      "value": 24,
    },
    Object {
      "label": 25,
      "value": 25,
    },
    Object {
      "isOutOfRange": true,
      "label": 26,
      "value": 26,
    },
    Object {
      "isOutOfRange": true,
      "label": 27,
      "value": 27,
    },
    Object {
      "isOutOfRange": true,
      "label": 28,
      "value": 28,
    },
  ],
}
`;

exports[`<Days> provides days in month for selected date 1`] = `
Object {
  "days": Array [
    Object {
      "label": 1,
      "value": 1,
    },
    Object {
      "label": 2,
      "value": 2,
    },
    Object {
      "label": 3,
      "value": 3,
    },
    Object {
      "label": 4,
      "value": 4,
    },
    Object {
      "label": 5,
      "value": 5,
    },
    Object {
      "label": 6,
      "value": 6,
    },
    Object {
      "label": 7,
      "value": 7,
    },
    Object {
      "label": 8,
      "value": 8,
    },
    Object {
      "label": 9,
      "value": 9,
    },
    Object {
      "label": 10,
      "value": 10,
    },
    Object {
      "label": 11,
      "value": 11,
    },
    Object {
      "label": 12,
      "value": 12,
    },
    Object {
      "label": 13,
      "value": 13,
    },
    Object {
      "label": 14,
      "value": 14,
    },
    Object {
      "label": 15,
      "value": 15,
    },
    Object {
      "label": 16,
      "value": 16,
    },
    Object {
      "label": 17,
      "value": 17,
    },
    Object {
      "label": 18,
      "value": 18,
    },
    Object {
      "label": 19,
      "value": 19,
    },
    Object {
      "label": 20,
      "value": 20,
    },
    Object {
      "label": 21,
      "value": 21,
    },
    Object {
      "label": 22,
      "value": 22,
    },
    Object {
      "label": 23,
      "value": 23,
    },
    Object {
      "label": 24,
      "value": 24,
    },
    Object {
      "label": 25,
      "value": 25,
    },
    Object {
      "label": 26,
      "value": 26,
    },
    Object {
      "label": 27,
      "value": 27,
    },
    Object {
      "label": 28,
      "value": 28,
    },
  ],
}
`;
